# obs-studio-tracy

./: .gitignore  .gitmodules  CMakeLists.txt
UI/: window-basic-settings-stream.cpp
libobs/: CMakeLists.txt  obs-cocoa.m  obs-display.c  obs-source.c  obs-video-gpu-encode.c  obs-video.c
libobs-d3d11/: CMakeLists.txt  d3d11-rebuild.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp
libobs-opengl/: CMakeLists.txt  gl-cocoa.m  gl-subsystem.c  gl-subsystem.h  gl-wayland-egl.c  gl-x11-egl.c
libobs-winrt/: winrt-capture.cpp
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
libobs/util/: profiler.c  profiler.h  threading-posix.c  threading-windows.c
plugins/obs-qsv11/: device_directx9.cpp
plugins/obs-webrtc/: CMakeLists.txt  webrtc-output.c  webrtc-output.h  webrtc-service.c  webrtc.c  whip-output.c  whip-service.c
plugins/obs-webrtc/webrtc/: Cargo.toml  build.rs
plugins/obs-webrtc/webrtc/src/: lib.rs  obs_log.rs  output.rs  whip.rs
plugins/obs-webrtc/webrtc/src/ffi/: output.rs
plugins/win-capture/: CMakeLists.txt  game-capture.c  graphics-hook-info.h
plugins/win-capture/graphics-hook/: d3d8-capture.cpp  d3d9-capture.cpp  dxgi-capture.cpp  gl-capture.c  vulkan-capture.c
